# twitter-clone

./: ._.idea  ._requirements.txt  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
twitter_clone/: ._.env  ._.gitignore  ._pyproject.toml  ._requirements.txt  .gitignore  README.md  pyproject.toml  requirements.txt
twitter_clone/twitter/: ._admin.py  ._forms.py  ._models.py  ._urls.py  ._views.py  admin.py  forms.py  models.py  urls.py  views.py
twitter_clone/twitter/migrations/: 0001_initial.py  0002_profile_date_modified.py  0003_twitter.py  0004_profile_profile_image.py  0005_twitter_likes.py  0006_profile_facebook_link_profile_homepage_link_and_more.py  0007_profile_bio_link_alter_profile_homepage_link.py  0008_rename_bio_link_profile_profile_bio.py  0009_rename_profile_bio_profile_profile_bio.py
twitter_clone/twitter/templates/: ._base.html  ._home.html  ._navbar.html  ._profile.html  ._profile_list.html  ._register.html  base.html  edit_twitter.html  followers.html  follows.html  home.html  login.html  navbar.html  profile.html  profile_list.html  register.html  search.html  search_user.html  show_twitter.html  update_user.html
twitter_clone/twitter_clone/: ._settings.py  ._urls.py  settings.py  urls.py
