[tool.poetry]
name = "ebac"
version = "0.1.0"
description = ""
authors = ["ClaudioFerreir <claudioferreirajr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
