[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = ["ClaudioFerreir <claudioferreirajr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
gitpython = "^3.1.43"
requests = "^2.32.3"
dj-database-url = "^2.2.0"
mysqlclient = "^2.2.4"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
